# aws-transcriber

./: .gitignore  LICENSE  README.md  cdk.json  package-lock.json  package.json  pyproject.toml
config/: account.template.ts
examples/: Recording-long-test-uploaded2024-09-15-01-01-30.m4a-transcription.srt  long-transcription.json  short-transcription.json  transcription_job.json
lib/: transcriber-stack.ts
lib/lambda/process_transcript/: process_transcript.py
lib/lambda/process_uploaded_audio/: process_uploaded_audio.py  pyproject.toml
lib/lambda/zip_bucket_content/: zip_bucket_content.py
test/: transcriber.test.ts
tools/: uploader.py
