[tool.poetry]
name = "process-uploaded-audio"
version = "0.1.0"
description = ""
authors = ["David Horvath <david.h@systematicguy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
